--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -3,64 +3,353 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.container {
+  width: 95%;
+  margin: 0 auto;
+}
+.navigation {
+  width: 980px;
+  top: 0px;
+  background-image: linear-gradient(to right, #260c7d, #159fcc, #1e979a);
+  position: fixed;
+  z-index: 0;
+}
+.header {
+  width: 95%;
+  height: 8%;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header a {
+  text-decoration: none;
+  /* margin: 0 5%; */
+  padding-left: 1%;
+  padding-right: 1%;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  /* width: 5%; */
+}
+.header .logo-item img {
+  padding-right: 1%;
+  /* border: 1px solid red; */
+}
+.header-row {
+  width: 100%;
+  height: 200px;
+  /*height: 100px; */
+  /* border: 1px solid black; */
+}
+/* nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  border: 1px solid black;
+} */
+.nav-items {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* border: 1px solid red; */
+}
+/* .logo-item {
+} */
+nav a {
+  width: 20%;
+  height: 50px;
+  margin: 1px;
+  /* border: 0.1 solid black; */
+}
+
+nav a:hover {
+  color: black;
+  font-weight: bold;
+}
+
+/*
+.logo-img{
+	display:inline-block;
+	/*width: 20%;
+	border: 1px solid black;
+	float: right;
+}
+*/
+
+.row1 {
+  margin: 1%;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+}
+.col-2 {
+  /*vertical-align: top;*/
+  width: 48%;
+  /* display:inline-block;*/
+  text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.row1 .col-2 h1 {
+  font-size: 100px;
+  width: 43%;
+  /*display: inline-block;*/
+  font-weight: bold;
+}
+.row1 .col-2 p {
+  border: 1px solid black;
+  font-size: 20px;
+  width: 20%;
+  padding: 5px 0 0 0;
+  margin: 0 0 0 350px;
+}
+.row1 .col-2 p:hover {
+  cursor: pointer;
+  background: #000;
+  color: #fff;
+}
+.row2 {
+  border-top: 1px solid black;
+  margin: 1%;
+  /* padding: 0%; */
+  width: 95%;
+  display: flex;
+  align-items: center;
+}
+.row2 .col-2 {
+  /*display: inline-block;*/
+  /*vertical-align: top;*/
+  width: 48%;
+  /* display:inline-block;*/
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+.row2 .col-2 p {
+  font-size: 25px;
+  width: 98%;
+  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	*/
+  text-align: left;
+  /* border: 1px dotted red; */
+}
+.row2 .col-2 h3 {
+  font-size: 25px;
+  text-align: left;
+  /*border: 1px dotted green;*/
+}
+.row4 {
+  width: 100%;
+  /* border: 1px dotted green; */
+}
+.middle-section {
+  padding-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.middle-img {
+  width: 95%;
+  height: 250px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  /* border: 1px dotted green; */
+}
+.row4 {
+  display: flex;
+  justify-content: center;
+}
+.row3 {
+  display: flex;
+  justify-content: center;
+  width: 95%;
+  padding-bottom: 1%;
+  padding-top: 3%;
+}
+.row3 .col-3 {
+  width: 33%;
+  /* display: inline-block; */
+  padding-bottom: 2%;
+  border-bottom: 1px solid black;
+}
+.row3 .col-3 p {
+  font-size: 20px;
+}
+.row3 .col-3 h3 {
+  font-size: 25px;
+  text-align: left;
+  /* border: 10px dotted red; */
+}
+footer {
+  width: 95%;
+  padding-left: 3%;
+  padding-bottom: 2%;
+}
+footer h3 {
+  font-size: 25px;
+  margin-top: 5%;
+}
+footer address {
+  font-size: 20px;
+  width: 20%;
+  line-height: 35px;
+}
+footer p {
+  padding: 1%;
+  width: 100%;
+  text-align: center;
+  /* display: inline-block; */
+  font-size: 20px;
+}
