--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -153,6 +153,8 @@ h5 {
 .container {
   width: 95%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .navigation {
   width: 980px;
@@ -352,4 +354,7 @@ footer p {
   text-align: center;
   /* display: inline-block; */
   font-size: 20px;
+}
+.services-row1 {
+  display: flex;
 }
